# auth-service

./: .gitignore  CMakeLists.txt  Makefile  README.md  auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.go  auth.pb.h  auth.proto  auth_client.cc  auth_server.cc  database.cc  database.h  generate_protos.sh  rpc_server_impl.cc  rpc_server_impl.h
load_test/: ammo.txt  auth.pb.go  grpc_gun.go  pandora.yaml  ro_ammo.txt  ro_pandora.yaml  ro_tank.yaml  rw_ammo.txt  rw_pandora.yaml  rw_tank.yaml  tank.yaml
